1.최단시간 버튼누르면 내용이 바뀌어요 2.역명 버튼을 누르면 (역무원에게 전화걸기/역사진/텍스트)가 있는 엑티비틱로 전환되어요 라라라라라라라랄라

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_searched_subway">SearchedSubway</string>
+    <string name="title_activity_station_on_foot">StationOnFoot</string>
 
 </resources>
